--- a/weather_analytics/squirrels.yml
+++ b/weather_analytics/squirrels.yml
@@ -2,7 +2,6 @@ project_variables:
   name: weather
   label: Weather Analytics
   major_version: 1
-  minor_version: 0
 
 
 packages: []
@@ -11,15 +10,6 @@ packages: []
 connections:
   - name: default
     url: sqlite:///database/weather.db
-
-
-selection_test_sets:
-  - name: group_by_month
-    parameters:
-      group_by: '2'
-      trend_type: '2'
-      time_type: '1'
-      time_periods: 16,17
 
 
 datasets:
@@ -34,6 +24,22 @@ datasets:
       - trend_type
       - time_type
       - time_periods
+
+
+selection_test_sets:
+  - name: group_by_month
+    datasets:
+      - weather_by_time
+    parameters:
+      group_by: '2'
+  
+  - name: trend_over_months
+    datasets:
+      - weather_trend
+    parameters:
+      trend_type: '2'
+      time_type: '1'
+      time_periods: ['16','17']
 
 
 settings: {}
