--- a/weather_analytics/env_example.yml
+++ b/weather_analytics/env_example.yml
@@ -1,6 +1,4 @@
-## Simply copy this file and rename to 'env.yml'
-
 credentials:
   motherduck_token:
-    username: ""
-    password: "" ## enter your motherduck token here
+    username: ...
+    password: ...
