--- a/mortgage_analysis/Dockerfile
+++ b/mortgage_analysis/Dockerfile
@@ -10,4 +10,5 @@ RUN apt-get update && apt-get install -y git
 
 RUN pip install --no-cache-dir -r requirements.lock
 
+EXPOSE 4465
 CMD ["sqrl", "run", "--host", "0.0.0.0"]
