--- a/expenses_no_python/squirrels.yml
+++ b/expenses_no_python/squirrels.yml
@@ -6,48 +6,21 @@ project_variables:
 
 packages: []
 
-## Example value for packages:
-#  - git: https://.../myrepo.git
-#    revision: v0.1.0
-#    directory: custom_name ## optional
-
 
 ## Uses SQLAlchemy URLs. More details here: https://docs.sqlalchemy.org/en/latest/core/engines.html
 connections:
   - name: default
     credential: null
-    url: sqlite:///./assets/expenses.db
+    url: sqlite:///{project_path}/assets/expenses.db
 
 
 parameters:
-  - type: SingleSelectParameter
-    factory: CreateWithOptions
-    arguments:                                            ## arguments to specify depend on values for 'type' and 'factory'
-      name: group_by
-      label: Group By
-      description: Dimension to aggregate by              ## optional, default is empty string
-      all_options:
-        - id: g0
-          label: Transaction
-          columns: ["masked_id", "date", "description"]   ## custom field
-          aliases: ["id", "date", "description"]          ## custom field
-        - id: g1
-          label: Date
-          columns: [date]
-        - id: g2
-          label: Category
-          columns: [category]
-        - id: g3
-          label: Subcategory
-          columns: [category, subcategory]
-  
   - type: TextParameter
     factory: CreateWithOptions
     arguments:
       name: description_filter
       label: Description Contains
       description: Substring of description to filter transactions by
-      parent_name: group_by
       all_options:
         - parent_option_ids: g0
 
@@ -57,29 +30,7 @@ datasets:
     label: Dataset Example
     scope: public
     parameters:
-      - group_by
       - description_filter
 
 
-selection_test_sets:
-  - name: no_auth_test1
-    datasets:
-      - dataset_example
-    parameters:
-      start_date: 2023-07-01
-
-
 settings: {}
-
-## Default values for settings:
-#   auth.token.expire_minutes: 30
-#   parameters.cache.size: 1024
-#   parameters.cache.ttl_minutes: 60
-#   results.cache.size: 128
-#   results.cache.ttl_minutes: 60
-#   selection_test_sets.default_name_used: default
-#   connections.default_name_used: default
-#   defaults.federates.materialized: table
-#   in_memory_database: sqlite
-#   seeds.infer_schema: True
-#   seeds.na_values: [NA]
