--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-squirrels[duckdb]==0.3.2
-scikit-learn
+squirrels[duckdb] @ git+https://github.com/squirrels-analytics/squirrels.git@288e722a94eed76caa03666c7fc075327177d580
+scikit-learn==1.5.1
+scipy
