--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-squirrels[duckdb] @ git+https://github.com/squirrels-analytics/squirrels.git@d401a328be3e99327b15e3802864014b90639743
+squirrels[duckdb]==0.4.1
 scikit-learn==1.5.1
 scipy
