--- a/expenses/.gitignore
+++ b/expenses/.gitignore
@@ -1,11 +1,12 @@
 **/__pycache__/
-playground*
 
 # common virtual environment names
+.env/
 .venv/
+venv/
 
 # squirrels files to ignore
-**/env.yml
-**/logs/
-**/target/
-**/sqrl_packages/
+env.yml
+logs/
+target/
+sqrl_packages/
