Changes for squirrels v0.4 (#4)
* Changes for squirrels v0.4

* Rename 'refinance house' to 'renew mortgage'

* Allow each project to have their own virtual environment

--- a/sqrl-expenses-slim/squirrels.yml
+++ b/sqrl-expenses-slim/squirrels.yml
@@ -1,5 +1,5 @@
 project_variables:
-  name: expenses_transactions
+  name: expenses
   label: Transactions History - Slim Example
   major_version: 1
 
