--- a/sqrl-weather-analytics/squirrels.yml
+++ b/sqrl-weather-analytics/squirrels.yml
@@ -11,10 +11,9 @@ connections:
   - name: default
     url: sqlite:///./assets/weather.db
   
-  ## Run this to attach the database to your Motherduck account: ATTACH 'md:_share/squirrels_analytics_public_db/597bd9c2-72c8-49b9-8ed6-f3d4441fda24'
+  ## First, run the following in your Motherduck account: ATTACH 'md:_share/squirrels_analytics_public_db/597bd9c2-72c8-49b9-8ed6-f3d4441fda24'
   - name: duckdb
-    credential: motherduck_token
-    url: duckdb:///md:squirrels_analytics_public_db?motherduck_token={password}
+    url: {{ env_vars.motherduck_url }}
 
 
 datasets:
