--- a/sqrl-1brc-postgres/squirrels.yml
+++ b/sqrl-1brc-postgres/squirrels.yml
@@ -13,20 +13,9 @@ connections:
 datasets:
   - name: aggregate_weather
     label: Aggregate Weather Data
-    scope: public
+  
+  - name: aggregate_weather2
+    label: Aggregate Weather Data 2
 
 
 settings: {}
-
-## Default values for settings:
-#   auth.token.expire_minutes: 30
-#   parameters.cache.size: 1024
-#   parameters.cache.ttl_minutes: 60
-#   datasets.cache.size: 128
-#   datasets.cache.ttl_minutes: 60
-#   dashboards.cache.size: 128
-#   dashboards.cache.ttl_minutes: 60
-#   selection_test_sets.default_name_used: default
-#   connections.default_name_used: default
-#   seeds.infer_schema: True
-#   seeds.na_values: []
