--- a/sqrl-expenses/squirrels.yml
+++ b/sqrl-expenses/squirrels.yml
@@ -1,6 +1,7 @@
 project_variables:
   name: sample
-  label: Sample Project
+  label: Sample Project - Expenses
+  description: This is a sample squirrels project for analyzing expense transactions
   major_version: 1
 
 
@@ -13,36 +14,41 @@ packages: []
 #     directory: custom_name ## optional
 
 
-## Uses SQLAlchemy URLs. More details here: https://docs.sqlalchemy.org/en/latest/core/engines.html
+## Connection URIs are usually in format "dialect://username:password@host:port/database" for database connections
+## However, subtle differences exist depending on the "type" specified. For example, sqlite URIs are slightly different.
+##   sqlalchemy:      sqlite:///relative/path/to/database.db
+##   connectorx/adbc: sqlite://relative/path/to/database.db  (adbc URI format matches connectorx thanks to polars integration)
+## Refer to specific documentation for supported databases by type (with URI examples):
+##   sqlalchemy: https://docs.sqlalchemy.org/en/latest/core/engines.html#database-urls
+##   connectorx: https://sfu-db.github.io/connector-x/databases.html
+##   adbc:       https://arrow.apache.org/adbc/ (see connectorx documentation for URI examples)
 connections:
   - name: default
-    credential: null
-    url: {{ env_vars.sqlite_conn_str }}   ## using Jinja to substitute environment variable from env.yml
+    type: sqlalchemy                      ## one of: sqlalchemy, connectorx, or adbc
+    uri: {{ env_vars.sqlite_uri }}        ## using Jinja to substitute environment variable from env.yml
 
 
 datasets:
-  - name: dataset_example                 ## model name uses same name unless "model" field is specified
-    label: Dataset Example
-    model: federate_example               ## optional - if not specified, then the "name" field is used
+  - name: dbview_dataset_example          ## model name uses same name unless "model" field is specified
+    label: Example Dataset from DBView Model
+    description: Aggregated expense transactions by month using dbview_example model
+    model: dbview_example 
     scope: public                         ## optional - one of 'public' (default), 'protected', or 'private'
     parameters:                           ## optional - if not specified, then all parameters are used
-      - group_by
-      - description_filter
       - start_date
       - end_date
-      - category
-      - subcategory
       - min_filter
       - max_filter
     traits: {}                            ## optional - defaults to empty object
   
-  - name: protected_dataset_example       ## requires auth.py file to work
-    label: Dataset Example 2
-    model: federate_example
-    scope: protected
+  - name: federate_dataset_example
+    label: Example Dataset from Federate Model
+    description: Aggregated expense transactions by custom dimension using federate_example model
+    model: federate_example 
+    scope: protected                      ## using an auth.py file is suggested for protected or private datasets
     parameters:
       - group_by
-      - description_filter
+      - limit
       - date_range
       - category
       - subcategory
@@ -53,13 +59,13 @@ datasets:
 selection_test_sets:
   - name: no_auth_test1
     datasets:                             ## optional section - if not provided, then test set is applicable for any dataset
-      - dataset_example
+      - dbview_dataset_example
     parameters:                           ## optional section - if not provided, then assumes no parameters. For unspecified parameters, default value is used
       start_date: 2023-07-01              ## this parameter only exists for dataset 'dataset_example'
   
   - name: auth_test1
     datasets:
-      - protected_dataset_example
+      - federate_dataset_example
     user_attributes:                      ## optional section - required if using test set on non-public datasets
       role: customer
     parameters:
@@ -86,7 +92,7 @@ settings: {}
 #   dashboards.cache.ttl_minutes: 60
 #   selection_test_sets.default_name_used: default
 #   connections.default_name_used: default
-#   defaults.federates.materialized: table
-#   in_memory_database: sqlite
+#   defaults.federates.materialized: view
 #   seeds.infer_schema: True
 #   seeds.na_values: [NA]
+#   duckdb_venv.file_path: target/.venv.duckdb
