--- a/sqrl-mortgage-analysis/squirrels.yml
+++ b/sqrl-mortgage-analysis/squirrels.yml
@@ -1,12 +1,14 @@
 project_variables:
   name: mortgage_analysis
   label: Renew Mortgage vs Pay Off House
+  description: This is a squirrels project for analyzing the net worth (at the end of the mortgage period) between renewing the mortgage and paying down the house.
   major_version: 1
 
 
 datasets:
   - name: amortization
     label: Amortization Schedule
+    description: The amortization schedule for the mortgage.
     parameters:
       - loan_amount
       - mortgage_rate
@@ -17,6 +19,8 @@ datasets:
   
   - name: single_scenario
     label: Single Scenario
+    description: |
+      A single scenario comparing the net worth between renewing the mortgage and paying down the house based on stock returns randomly generated from a normal distribution.
     parameters:
       - loan_amount
       - mortgage_payment
@@ -26,6 +30,8 @@ datasets:
   
   - name: simulations
     label: Simulations
+    description: |
+      Given the number of trials, this dataset runs multiple simulations of the net worth (at the end of the mortgage period) between renewing the mortgage and paying down the house.
     parameters:
       - loan_amount
       - mortgage_payment
