--- a/sqrl-weather-analytics/requirements.in
+++ b/sqrl-weather-analytics/requirements.in
@@ -1,3 +1,3 @@
-squirrels==0.4.1
+squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@71d766b93de1a5886b2aafaa67732ca3937c6a05
 scikit-learn==1.5.1
 duckdb-engine
