--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,9 +26,8 @@ jobs:
           images: timhuang95/mortgage-analysis-squirrels
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
-        working-directory: ./sqrl-mortgage-analysis
         with:
-          context: .
+          context: ./sqrl-mortgage-analysis
           file: ./Dockerfile
           push: true
           tags: timhuang95/mortgage-analysis-squirrels:latest
