--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -33,29 +33,29 @@ jobs:
           tags: timhuang95/mortgage-analysis-squirrels:latest
           labels: ${{ steps.meta.outputs.labels }}
   
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   if: ${{ github.ref == 'refs/heads/dev' }}
-  #   needs: [ build_and_push ]
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #     - name: copy file via ssh key
-  #       uses: appleboy/scp-action@v0.1.4
-  #       with:
-  #         host: ${{ secrets.HOST }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.KEY }}
-  #         source: "docker-compose.yml, nginx/nginx.conf"
-  #         target: .
-  #     - name: run docker-compose
-  #       uses: appleboy/ssh-action@v1.0.0
-  #       with:
-  #         host: ${{ secrets.HOST }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.KEY }}
-  #         script: |
-  #           docker-compose down
-  #           docker rmi -f $(docker images -q)
-  #           docker-compose pull
-  #           docker-compose up -d
+  deploy:
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/dev' }}
+    needs: [ build_and_push ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: copy file via ssh key
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: 54.236.110.112
+          username: ec2-user
+          key: ${{ secrets.MORTGAGE_ANALYSIS_KEY }}
+          source: "docker-compose.yml, nginx/nginx.conf"
+          target: .
+      - name: run docker-compose
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: 54.236.110.112
+          username: ec2-user
+          key: ${{ secrets.MORTGAGE_ANALYSIS_KEY }}
+          script: |
+            docker-compose down
+            docker rmi -f $(docker images -q)
+            docker-compose pull
+            docker-compose up -d
