--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/checkout@v4
       - name: copy file via ssh key
         uses: appleboy/scp-action@v0.1.4
+        working-directory: ./sqrl-mortgage-analysis
         with:
           host: 54.236.110.112
           username: ec2-user
