--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -42,13 +42,12 @@ jobs:
         uses: actions/checkout@v4
       - name: copy file via ssh key
         uses: appleboy/scp-action@v0.1.4
-        working-directory: ./sqrl-mortgage-analysis
         with:
           host: 54.236.110.112
           username: ec2-user
           key: ${{ secrets.MORTGAGE_ANALYSIS_KEY }}
-          source: "docker-compose.yml, nginx/nginx.conf"
-          target: .
+          source: "sqrl-mortgage-analysis/docker-compose.yml, sqrl-mortgage-analysis/nginx/nginx.conf"
+          target: "docker-compose.yml, nginx/nginx.conf"
       - name: run docker-compose
         uses: appleboy/ssh-action@v1.0.0
         with:
