--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -28,7 +28,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./sqrl-mortgage-analysis
-          file: ./sqrl-mortgage-analysis/Dockerfile
           push: true
           tags: timhuang95/mortgage-analysis-squirrels:latest
           labels: ${{ steps.meta.outputs.labels }}
@@ -47,7 +46,8 @@ jobs:
           username: ec2-user
           key: ${{ secrets.MORTGAGE_ANALYSIS_KEY }}
           source: "sqrl-mortgage-analysis/docker-compose.yml, sqrl-mortgage-analysis/nginx/nginx.conf"
-          target: "docker-compose.yml, nginx/nginx.conf"
+          target: .
+          strip_components: 1
       - name: run docker-compose
         uses: appleboy/ssh-action@v1.0.0
         with:
