--- a/sqrl-mortgage-analysis/nginx/nginx.conf
+++ b/sqrl-mortgage-analysis/nginx/nginx.conf
@@ -1,36 +1,22 @@
 server {
     listen 80;
-    server_name 54.236.110.112;
+    return 301 https://$host$request_uri;
+}
 
-    client_max_body_size 32m;
+server {
+    listen 443 default_server ssl;
+    server_name mortgage-analysis.duckdns.org;
+    server_tokens off;
 
-    # location ^~ /.well-known/acme-challenge {
-    #     default_type text/plain;
-    #     root /var/www/letsencrypt;
-    # }
+    ssl_certificate     /etc/letsencrypt/live/mortgage-analysis.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mortgage-analysis.duckdns.org/privkey.pem;
+    ssl_dhparam         /etc/letsencrypt/dhparams/dhparams.pem;
 
     location / {
         proxy_pass http://squirrels:4465;
-        # return 301 https://$host$request_uri;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
-# server {
-#     listen 443 default_server ssl;
-#     server_name example.com;
-#     server_tokens off;
-
-#     ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
-#     ssl_dhparam         /etc/letsencrypt/dhparams/dhparams.pem;
-
-#     client_max_body_size 32m;
-
-#     location / {
-#         proxy_pass http://squirrels:4465;
-#         proxy_set_header Host $http_host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
