--- a/sqrl-mortgage-analysis/nginx/nginx.conf
+++ b/sqrl-mortgage-analysis/nginx/nginx.conf
@@ -5,11 +5,11 @@ server {
 
 server {
     listen 443 default_server ssl;
-    server_name mortgage-analysis.duckdns.org;
+    server_name squirrels-analytics.duckdns.org;
     server_tokens off;
 
-    ssl_certificate     /etc/letsencrypt/live/mortgage-analysis.duckdns.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mortgage-analysis.duckdns.org/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/squirrels-analytics.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/squirrels-analytics.duckdns.org/privkey.pem;
     ssl_dhparam         /etc/letsencrypt/dhparams/dhparams.pem;
 
     location / {
