--- a/sqrl-mortgage-analysis/squirrels.yml
+++ b/sqrl-mortgage-analysis/squirrels.yml
@@ -39,16 +39,5 @@ datasets:
       - num_trials
 
 
-dashboards:
-  - name: simulation_percentiles
-    label: Simulation Percentiles
-    parameters:
-      - loan_amount
-      - mortgage_payment
-      - num_years
-      - num_months
-      - num_trials
-
-
 settings:
-  results.cache.ttl_minutes: 0
+  datasets.cache.ttl_minutes: 0
