--- a/sqrl-expenses-slim/.gitignore
+++ b/sqrl-expenses-slim/.gitignore
@@ -1,11 +1,12 @@
 **/__pycache__/
-playground*
 
 # common virtual environment names
 .venv/
+venv/
 
 # squirrels files to ignore
-**/env.yml
-**/logs/
-**/target/
-**/sqrl_packages/
+.env.local
+duckdb_init.sql
+logs/
+target/
+sqrl_packages/
