--- a/sqrl-mortgage-analysis/.gitignore
+++ b/sqrl-mortgage-analysis/.gitignore
@@ -2,13 +2,11 @@
 
 # common virtual environment names
 .venv/
+venv/
 
 # squirrels files to ignore
 .env.local
+duckdb_init.sql
+logs/
 target/
 sqrl_packages/
-logs/
-
-# additional files for docker to ignore
-Dockerfile
-.git/
