--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -22,6 +22,8 @@ services:
       dockerfile: Dockerfile
     image: squirrels-mortgage:latest
     restart: unless-stopped
+    volumes:
+      - ./sqrl-mortgage-analysis/target:/app/target
     networks:
       - squirrels-network
 
@@ -33,6 +35,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./sqrl-weather-analytics/.env.local:/app/.env.local:ro
+      - ./sqrl-weather-analytics/target:/app/target
     networks:
       - squirrels-network
 
@@ -44,6 +47,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./sqrl-expenses/.env.local:/app/.env.local:ro
+      - ./sqrl-expenses/target:/app/target
     networks:
       - squirrels-network
 
