--- a/sqrl-mortgage-analysis/Dockerfile
+++ b/sqrl-mortgage-analysis/Dockerfile
@@ -1,19 +1,11 @@
 FROM python:3.12-slim
-# Set working directory to match where we'll copy files
 WORKDIR /app
 
-# Copy everything from build context to container
 COPY . .
-
-# Verify the file exists after copying (this will show in build logs)
-RUN ls -la && \
-    echo "Checking for squirrels.yml:" && \
-    ls -la squirrels.yml || echo "squirrels.yml not found!"
 
 RUN apt-get update && apt-get install -y git
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 4465
 
-# Make sure we're in the right directory when running the command
-CMD ["sh", "-c", "ls -la && sqrl run --host 0.0.0.0 --port 4465"]
+CMD ["sqrl", "run", "--host", "0.0.0.0", "--port", "4465"]
